<resources>
    <string name="app_name">青春彩虹伞</string>

    <!--    MainActivity-->
    <string name="home">Home</string>
    <string name="classes">Classes</string>
    <string name="chat">Chat</string>
    <string name="me">Me</string>
    <string name="Search">Search</string>
    <!--    HomeFragment-->
    <string name="survey">Survey</string>
    <string name="library">Libraries</string>
    <string name="professionals">Professionals</string>
    <string name="tools">Tools</string>
    <string name="subscribe">Subscribe</string>
    <string name="more">More</string>
    <string name="watched">Watched</string>
    <!--    InvestigationList-->
    <!--    Investigation-->
    <string name="start">Start</string>
    <string name="under_start_words">Click the button blow to Quit</string>
    <string name="alert">Alert</string>
    <string name="submit">Submit</string>
    <string name="quit_title">Are you sure to QUIT ?</string>
    <string name="quit_message">Click Confirm to Quit</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="loading_successfully">Loading Successfully</string>
    <string name="uploading">Uploading</string>
    <string name="loading">Loading</string>
    <!--    Activity_tweetDetails-->
    <string name="moments">Moments</string>
    <string name="replies">Replies</string>
    <string name="write_replies">Write Your Comments</string>
    <string name="reply">Reply</string>
    <string name="send">Send</string>
    <string name="remote_login">Account login offsite , please log in again!</string>
    <!--    MeFragment-->
    <!--    <string name=""></string>-->
    <string name="notify">Click Here To Edit Your Infos</string>
    <string name="about">About</string>
    <string name="admin">Administrator</string>
    <string name="security">Security policy</string>
    <string name="agreements">User Agreement</string>
    <string name="privacy">Privacy Policy</string>
    <string name="help">Help and feedback</string>
    <!--    Administrator-->
    <string name="upload_from_local">Upload From Local</string>
    <string name="upload_from_internet">Upload From Internet</string>
    <string name="upload_CBT_classes">Upload CBT Classes</string>
    <!--    UploadTweet-->
    <string name="title_sub">Color</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <!--    Edit_User_Info|-->
    <string name="edit">Edit</string>
    <string name="head_portrait">head portrait</string>
    <string name="userid">UserId</string>
    <string name="age">Age</string>
    <string name="coins">Coins</string>
    <!--    Choose Head Portrait-->
    <string name="select_photos">Choose Photos</string>
    <!--    Login-->
    <string name="login">Login</string>
    <string name="wrong_password">Password InCorrect!</string>
    <string name="userid_hint">Username or PhoneNumber</string>
    <string name="password">Password</string>
    <!--    Register-->
    <!--    <string name=""></string>-->
    <string name="register">Register</string>
    <string name="id_hint">Please Enter Your ID (PhoneNumber or StudentId)</string>
    <string name="password_hint">Please Enter Your Password (length from 6 to 20)</string>
    <string name="password_confirm">Enter Your Password Again (length from 6 to 20)</string>
    <string name="register_id_wrong">Id Incorrect!</string>
    <string name="register_psd_wrong">Password Type Error</string>
    <string name="register_dif_psd">Password Type Error</string>
    <string name="connect_fail">Sorry! Connect Failed</string>
    <string name="register_denyed">Register Failed , Please Check Your Id ( There Is Already Have One)</string>
    <string name="register_succeed">Registed Successfully</string>
    <!--    Upload From Local-->
    <string name="title_hint">Please Type In Title</string>
    <string name="title">Title</string>
    <string name="contains">Please Type In Contains</string>
    <!--    Upload From Internet-->
    <string name="links">Links</string>
    <string name="links_hint">Here Links</string>
    <string name="click_image_to_select_image">Click Image To Select Images</string>
    <string name="click_image_on_the_right">Click Image On The Right</string>
    <!--Upload Course-->
    <string name="course_title">Course Title</string>
    <string name="input_course_title">Please input Course Title </string>
    <string name="teacher">授课教师</string>
    <string name="input_teacher_name">请输入授课教师姓名</string>
    <string name="chose_pdf_file">选择课件</string>
    <string name="chose">选择</string>
</resources>
