<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Administrator.UploadCourse">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:id="@+id/u_c_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/course_title"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/u_c_e_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_toEndOf="@+id/u_c_title"
            android:background="@drawable/edit_text_style"
            android:hint="@string/input_course_title"
            android:textColor="@android:color/black" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:id="@+id/u_c_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/teacher"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/u_c_e_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_toEndOf="@+id/u_c_teacher"
            android:background="@drawable/edit_text_style"
            android:hint="@string/input_teacher_name"
            android:textColor="@android:color/black" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/click_image_to_select_image"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/click_image_on_the_right"
                android:textColor="@color/red"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/t_i_img"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_toEndOf="@+id/img"
            android:scaleType="fitCenter"
            android:src="@drawable/font_img_icon" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="10dp">
        <TextView
            android:id="@+id/u_c_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/chose_pdf_file"
            android:textSize="20dp" />
        <Button
            android:id="@+id/u_c_chose_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:text="@string/chose"
            android:textColor="@android:color/black" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="10dp">
        <TextView
            android:id="@+id/u_c_question_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/chose_pdf_file"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/u_c_input_question_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_toEndOf="@+id/u_c_question_page"
            android:background="@drawable/edit_text_style"
            android:hint="@string/input_teacher_name"
            android:textColor="@android:color/black" />

    </RelativeLayout>
</>